# BaseBuddy

./: .dockerignore  .gitignore  CLAUDE.md  Dockerfile  FAQ  LICENSE  README.md  SETUP_FROM_SCRATCH.md  TestBuild.sh  VIGNETTES.md  basebuddy.py  bb_runner.py  bb_runners.py  bb_utils.py  demo_kras_g12c.py  demo_simple.py  environment-arm.yml  environment-complete.yml  environment-gui.yml  environment-unified.yml  environment-x86.yml  environment.yml  pyproject.toml  requirements.txt  run_basebuddy.sh  run_gui.py  run_gui_simple.sh  validate.sh
docs/: README.md  apple_silicon_setup.md  dependencies.md  environment_setup.md  gui_settings_persistence.md  packaging_guide.md
examples/: BRAF.sh  README.md  kras_g12c_examples.sh
instructions/: enable_dz_based_signatures.md  enable_sequencer_artifact_signatures.md
logs/: GUI_CONDA_FIX.md  all_updates_summary.md  auto_align_feature.md  auto_align_fix.md  bam_naming_update.md  chromosome_naming_guide.md  directory_cleanup_summary.md  genome_build_feature.md  genome_build_reference_linking.md  gui_settings_persistence_summary.md  igv_compatibility_fix.md  igv_compatibility_fix_implemented.md  igv_viewing_guide.md  minimap2_removal_documentation.md  new_cli_commands.md  reference_setup_log.md  srs_lrs_updates_summary.md  ui_improvements_button_timer_success_message.md
results/: toy.bam  toy.fa  toy.fa.fai  toy.sam
scripts/: README.md  addsnv_wrapper.py  build_app.sh  install_bamsurgeon.sh  install_bamsurgeon_alternatives.sh  install_miniforge.sh  launch_gui_macos.py  prepare_tools.sh  rebuild_bwa_index.sh  run_gui.py  setup_basebuddy_env.sh  setup_dev_env.sh  setup_hybrid_env.sh  setup_unified_env.sh  verify_packaging_setup.sh
src/: basebuddy.py
tests/: smoke_test.sh  test_runner.py  (+4 more)
(+44 files in other folders)
