# pyproject.toml

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "basebuddy"
version = "0.1.0"
requires-python = ">=3.10"
# These are the direct Python dependencies of your application.
# They will be installed by pip.
dependencies = [
    "typer",
    "pysam",
    # Note: bamsurgeon must be installed via conda, not pip
    # "bamsurgeon",
    # Note: These are optional - only needed for specific features
    # "SigProfilerSimulator",
    # "nanosim-h"
]

# This section makes the 'basebuddy' command work after installation.
[project.scripts]
basebuddy = "basebuddy.cli:app"

# Optional: Define development dependencies like pytest here.
[project.optional-dependencies]
dev = ["pytest"]
# Optional dependencies for specific features
signatures = ["SigProfilerSimulator"]
longreads = ["nanosim-h"]
gui = ["customtkinter"]
# Full installation (note: bamsurgeon still needs conda)
full = ["SigProfilerSimulator", "nanosim-h", "customtkinter"]